--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.PokeTinderNew">
 
         <activity
-            android:name=".activity.SplashActivity"
+            android:name=".ui.view.SplashActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,16 +22,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.RegisterActivity"
+            android:name=".ui.view.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.LoginActivity"
+            android:name=".ui.view.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.OnboardingActivity"
+            android:name=".ui.view.OnboardingActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".ui.view.MainActivity"
             android:exported="true" />
     </application>
 
