--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -57,6 +58,7 @@ dependencies {
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation 'com.google.firebase:firebase-config-ktx:21.1.0'
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     // Card
